--- a/index.html
+++ b/index.html
@@ -80,16 +80,13 @@
     <section class="contactMe" id="contactMe">
         <div class="title"><h2>Contact Me</h2></div>
         <form action="process.php" method="POST">
-            <!--<label> Name</label>-->
+         <form action="https://formsubmit.co/xuwillie1@gmail.com" method="POST">
             <div><input type="text" name="name" placeholder="Full name"></div>
-            <!--<label>Email</label>-->
             <div><input type="email" name="email" placeholder="Email"></div>
-            <!--<label>Subject</label>-->
             <div><input type="text" name="subject" placeholder="Subject"></div>
-             <!--<label>Message</label>-->
             <div><textarea name="message" placeholder="Message"></textarea></div>
-            <!--Button-->
             <div class="submit"><input type="submit" value="Send"/></div>
+        </form>
         </form>
     </section>
     <script src="script.js"></script>
